# wslwrap

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
src/: main.rs
