[package]
name = "wslwrap"
version = "0.1.3"
authors = ["TheGoddessInari <thegoddessinari@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.0"
regex = "1"

[dependencies.env_logger]
version = "0.6"
default-features = false
features = ["humantime", "regex"]

[dependencies.log]
version = "0.4"
features = ["max_level_debug", "release_max_level_warn"]