[package]
name = "wslwrap"
version = "0.1.3"
authors = ["TheGoddessInari <thegoddessinari@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.0"

[dependencies.env_logger]
version = "0.6"
default-features = false
features = ["humantime"]

[dependencies.log]
version = "0.4"
features = ["max_level_debug", "release_max_level_warn"]

[dependencies.regex]
version = "1.3.0"
default-features = false
features = ["std"]
